Sat Apr  1 20:51:47 2000  Christopher Faylor <cgf@cygnus.com>

	* include/wininet.h: Add three more "INTERNET_OPTIONS".

2000-03-30  Mumit Khan  <khan@xraylith.wisc.edu>

	* include/winbase.h (CreateHardLink{A,W}): Add prototypes.
	* include/winerror.h (ERROR_TOO_MANY_LINKS): Add macro.
	* include/winnt.h (SEC_*): Add macros.
	* lib/th32.def: Use Kernel32.dll instead of TH32.DLL.
	* include/ole.h: Workaround for C++ parser bug.
	* include/rpcdcep.h: Likewise.
	* include/winsock.h: Likewise.

Sun Mar 26 13:41:47 2000  Christopher Faylor <cgf@cygnus.com>

	* include/winnt.h: Eliminate duplicate PCONTEXT and LPCONTEXT typedefs.

2000-02-28  Mumit Khan  <khan@xraylith.wisc.edu>

	Patches from Jan Nijtmans <j.nijtmans@chello.nl>:
	* include/wtypes.h (PBLOB, LPBLOB): Define.
	* include/winsock2.h: Much more complete version.
	(FD_SET, SOMAXCONN): Protect common macros defined by winsock.h.

	Patches from Jan Nijtmans <j.nijtmans@chello.nl>:
	* include/winsock.h (FD_CLR): Add missing ')'.
	(timercmp): Fix macro to handle all 6 comparison operators.
	(AF_FIREFOX, AF_UNKNOWN1, AF_BAN, AF_ATM, AF_INET6): Define.
	(AF_MAX): Update.
	(PF_FIREFOX, PF_UNKNOWN1, PF_BAN, PF_ATM, PF_INET6): Define.

	* include/largeint.h: Rename HAVE_INT64 macro to _HAVE_INT64 to avoid
	namespace pollution.
	* include/rpcndr.h: Likewise.
	* include/winnt.h: Likewise.
	* include/shlobj.h (SHGetDataFromIDList{A,W}): Fix typo.
	(SHGetSpecialFolderPath{A,W}): Add prototypes.
	* lib/ole32.def: Add missing exports.
	* include/winbase.h (TLS_MINIMUM_AVAILABLE): Move macro from here
	* include/winnt.h (TLS_MINIMUM_AVAILABLE): to here.
	(NT_TIB): Define.
	* include/tlhelp32.h: New file.

Mon Feb 28 17:08:03 2000  Christopher Faylor <cgf@cygnus.com>

	* include/rapi.h: New file.
	* lib/rapi.def: New file.

2000-02-11  Axel Riese  <ariese@andromeda.risc.uni-linz.ac.at>

	* oaidl.h (LPTYPECOMP): Remove multiple definition.

2000-02-03  Mumit Khan  <khan@xraylith.wisc.edu>

	* Snapshot 2000-02-03.
